--- a/LAB1/README
+++ b/LAB1/README
@@ -7,16 +7,23 @@ CSCI 3453
 Lab1
 
 **************************************************************
-************ TO COMPILE ----- 'make all'	         *****
-************ TO RUN --------- './trystan_kaest_lab1' 	 *****
+************ TO COMPILE ----- 'make all'	               *****
+************ TO RUN --------- './trystan_kaest_lab1' 	   *****
 **************************************************************
 
 DESCRIPTION:
+The primary goal of this assignment is to understand and gain some familiarity
+with the system call interface in Unix Environment. In this assignment you will
+be using system call and proc filesystem to gather information about the system.
 
 
 ************Structure***********
+This entire program is contained within the trystan_kaest_lab1.cpp file.
+Upon running of this program it will print out to the screen all the
+systemInformation that was gathered. Two functions are seperated out that are
+designed to handle reading in from proc files in a clean way.
 
-
+It also has a makefile in order to compile.
 
 **************Status************
 
@@ -24,7 +31,6 @@ DESCRIPTION:
    16 GB 1867 MHz DDR3
 
 	-using gcc/g++ 7.2.0 processor
-	-Linted using both Clang and gcc 7.4.2
 
 -> Tested on csegrid.ucdenver.pvt
 
@@ -52,4 +58,3 @@ DESCRIPTION:
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-
